// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate host duplications throws on duplicate upstream host 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Duplicate host found on upstream",
      "errorCode": "DUPLICATE_UPSTREAM_FOUND"
    }
  ],
  "data": {}
}
`;

exports[`validate host duplications throws on duplicate upstream host and sourceHosts 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Duplicate host found on upstream",
      "errorCode": "DUPLICATE_UPSTREAM_FOUND"
    }
  ],
  "data": {}
}
`;

exports[`validate host duplications throws on upstream w/ host and sourceHosts 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Upstream should have either sourceHosts or host property",
      "errorCode": "INVALID_UPSTREAM_CONFIGURATION"
    }
  ],
  "data": {}
}
`;

exports[`validate host duplications throws on upstream w/o host and sourceHosts 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Upstream should have either sourceHosts or host property",
      "errorCode": "INVALID_UPSTREAM_CONFIGURATION"
    }
  ],
  "data": {}
}
`;

exports[`validateMetadataCharacters - Validation that namespaces and names contain only valid gql chars and dashes throws when namespace names contain invalid chars 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Invalid characters found in namespace name special_not_allowed_@@ of resource type schemas, allowed characters are /^[A-Z_a-z-][\\\\w-]*$/",
      "errorCode": "INVALID_CHARACTERS_IN_NAME"
    }
  ],
  "data": {}
}
`;

exports[`validateMetadataCharacters - Validation that namespaces and names contain only valid gql chars and dashes throws when resource names contain invalid chars 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Invalid characters found in resource name special_not_allowed_$$ of resource type policies, allowed characters are /^[A-Z_a-z-][\\\\w-]*$/",
      "errorCode": "INVALID_CHARACTERS_IN_NAME"
    }
  ],
  "data": {}
}
`;

exports[`validateMetadataNameConflicts throws when two namespace names are similar, differing only between underscores and dashes 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Namespace name conflict found between some-ns and some_ns, they have to either match exactly or have a difference in non-special characters",
      "errorCode": "NAME_CONFLICT"
    }
  ],
  "data": {}
}
`;

exports[`validateMetadataNameConflicts throws when two resource names from the same namespace and resource type are similar, differing only between underscores and dashes 1`] = `
{
  "errors": [
    {
      "name": "Error",
      "message": "Resource name conflict found between policy-1 and policy_1 of resource type policies in namespace some-ns, they have to either match exactly or have a difference in non-special characters",
      "errorCode": "NAME_CONFLICT"
    }
  ],
  "data": {}
}
`;
